--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>chapter2</module>
         <module>chapter3</module>
         <module>chapter4</module>
+        <module>chapter5</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -51,6 +52,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>0.2.23</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-core</artifactId>
+            <version>2.6.6</version>
         </dependency>
     </dependencies>
 
