--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>chapter3</module>
         <module>chapter4</module>
         <module>chapter5</module>
+        <module>chapter6</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -24,7 +25,6 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
-
 
     <dependencies>
         <dependency>
@@ -57,6 +57,11 @@
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache-core</artifactId>
             <version>2.6.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>4.1.6.RELEASE</version>
         </dependency>
     </dependencies>
 
