--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>chapter6</module>
         <module>chapter7</module>
         <module>chapter8</module>
+        <module>chapter10</module>
+        <module>chapter9</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -24,8 +26,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
